spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__zeroextending_to_shorter_value.snap
---
source: spade-tests/src/hir_lowering.rs
assertion_line: 2339
---
fn main() -> int<4> {
    let a: int<8> = 0;
    let b: int<4> = std::conv::zext(a);
    b
}


error: Zero-extending to a shorter value
  ┌─ testinput:3:37
  │
3 │     let b: int<4> = std::conv::zext(a);
  │                     ----------------^-
  │                     │               │
  │                     │               This value is 8 bits
  │                     The value is zero-extended to 4 bits here
  │
  = note: Zero-extension cannot decrease width, use trunc instead


